# HIR

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: External_Protobuf.cmake  Findbash.cmake
cmake/scripts/: compileProto.sh  protobuf-postbuild.cmake.in
cmake/templates/: protobuf_python_install_script.sh.in
doc/: CMakeLists.txt  TODO.txt  common_elements.tex  example.tex  expression_elements.tex  intro.tex  irregular_grid_elements.tex  macro.tex  main.tex  root_element.tex  statement_elements.tex
doc/workshop/: preparingWorkshop.tex
src/proto/: HIR.proto
src/proto/HIR/: HIR.proto
src/python/: deserialize.py  deserializeHIR.py  deserializeIIR.py
